# iknowfirst

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-14-ai-radar-v1.md
docs/superpowers/specs/: 2026-06-14-ai-radar-design.md
src/iknowfirst/: analyzer.py  config.py  filtering.py  logging_setup.py  main.py  pipeline.py  preflight.py  scheduler.py  trendscout.py
src/iknowfirst/db/: __init__.py  models.py  repository.py  session.py
src/iknowfirst/engagement/: sampler.py  tracker.py  youtube_api.py
src/iknowfirst/fetcher/: arxiv.py  base.py  dispatch.py  youtube.py
src/iknowfirst/llm/: base.py  factory.py  openai_compatible.py
src/iknowfirst/notify/: notifier.py  wecom.py
src/iknowfirst/sources/: collector.py  feeds.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_filtering.py  test_pipeline.py  test_preflight.py  test_scheduler_wiring.py  test_trendscout.py
tests/db/: test_models.py  test_repository.py
tests/engagement/: test_sampler.py  test_tracker.py  test_youtube_api.py
tests/fetcher/: test_base.py  test_dispatch.py  test_youtube.py
tests/llm/: test_factory.py
tests/notify/: test_notifier.py  test_wecom.py
tests/sources/: test_collector.py  test_feeds.py
