[project]
name = "iknowfirst"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "feedparser>=6.0",
  "yt-dlp>=2024.0",
  "openai>=1.30",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
